0.9.0b16:
  Use async interfaces where possible.
0.9.0b15:
  Fix threading issue with cover and valve.
0.9.0b14:
  Restore previous YAML config support.
0.9.0b13:
  Refactored cover to provide valve support.
  Made `version and device` optional in the yaml config
0.9.0b12:
  Fix fan support.
  Fix cover service calls.
  Add GPS to device tracker
0.9.0b11:
  Fix up light support.
  Fix race condition in meta data write
  Fix reload issue that just doubled up the devices
0.9.0b10:
  Fix IO in event loop issues
0.9.0a9:
  I forgot to bump the revision
  Fix set availability service
0.9.0a8:
  fix upgrade issue #2, use config functions not hard coded directory locations
0.9.0a7:
  remove deprecated constants
  fix upgrade issue
0.9.0a6:
  add an import notice
  added Czech translation, thanks @Tony763
0.9.0a5:
  fix availability service issue
0.9.0a4:
  fix time delta import issue
0.9.0a3:
  fix device tracker import issue
  Slovakian translations, thanks @misa1515
0.9.0a2:
  add extra import debug
0.9.0a1:
  move to config flow and proper integration support

0.8.0b1: move into beta...
0.8.0a3: save device tracker location
0.8.0a2: added locking/unlocking state to locks
0.8.0a1: Added state restore to all but device tracker.
            [thanks to SergeyPomelov for the push on this]

0.7.9: Added state restore to sensor [thanks to SergeyPomelov]
0.7.8: Added brightness support.
0.7.7: Remove deprecated white value code
       Added units of measurement [thanks Tony763]
       Added custome effects [thanks Digitalralf]
       Updated HACS url [thanks wrt54g]
0.7.6: Remove deprecated fan speeds
0.7.4: Fix attributes issue.
0.7.3: Add percentage support to fan
       Allow user to set availability of the device
0.7.2: Make virtual part of name optional
0.7.1: fixed Home Assistant breaking change
0.4: fixed missing exception
0.3: added locks
0.2: added device trackers
0.1: initial release